# devops-pipelines-ca2

./: .gitignore  README.md  basic-qa.py  pyproject.toml  requirements.txt  setup.py
.github/actions/build-action/: action.yml
.github/actions/codeql-action/: action.yml
.github/workflows/: build-test.yml  codeql.yml  pipeline.yml  zap.yml
application/: __init__.py  config.py  events.py  query_parser.py
presentation/: app.py  forms.py
speak_to_data/: app_data.json  tiny-relevant-qa.py
speak_to_data/application/: __init__.py  app_data_loader.py  config.py  events.py  prepare_for_model.py  query_parser.py  response_parser.py
speak_to_data/communication/: __init__.py  network.py  persistence.py
speak_to_data/presentation/: __init__.py  app.py  forms.py
speak_to_data/presentation/forms/: __init__.py  action_form.py  forms.py  shared_fields.py
speak_to_data/presentation/templates/: _formhelpers.html  base.html  harvest.html  index.html  maintain.html  sow.html
speak_to_data/tests/: test_application.py  test_communication.py  test_presentation.py
speak_to_data/tests/acceptance/: test_insight_natural_language.py  test_record_events.py
speak_to_data/tests/developer/: test_application.py  test_communication.py  test_presentation.py
speak_to_data/tests/devtests/: test_application.py
speak_to_data/tests/integration/: test_csvToTable.py  test_generateAppData.py
speak_to_data/tests/test_data/: large_mock_data.csv  mock_app_data.json  oneline_mock_data.csv  small_mock_data.csv
tests/: test_application.py  test_communication.py  test_presentation.py
