[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "speak_to_data"
version = "0.2.0"
description = ""
authors = ["Vince <vince@krijnsen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
WTForms = "^3.1.2"
Flask-WTF = "^1.2.1"
WTForms-Components = "^0.10.5"
dateparser = "^1.2.0"
spacy = "^3.7.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
